<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/guideline_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/guideline_margin" />

    <TextView
        android:id="@+id/dateStartLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textField_margin_top"
        android:text="@string/textview_date_start"
        android:textSize="@dimen/dateTextSize"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="@+id/topGuideline"  />

    <TextView
        android:id="@+id/dateStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/textField_margin_top"
        android:textSize="@dimen/dateTextSize"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/dateStartLabel"
        app:layout_constraintTop_toTopOf="@+id/dateStartLabel" />

    <TextView
        android:id="@+id/dateEndLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textField_margin_top"
        android:text="@string/textview_date_end"
        android:textSize="@dimen/dateTextSize"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/dateStartLabel" />

    <TextView
        android:id="@+id/dateEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/textField_margin_top"
        android:textSize="@dimen/dateTextSize"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/dateEndLabel"
        app:layout_constraintTop_toTopOf="@+id/dateEndLabel" />

    <TextView
        android:id="@+id/infoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textField_margin_top"
        android:text="@string/textview_task_info"
        android:textSize="@dimen/dateTextSize"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/dateEndLabel" />


    <EditText
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/textField_margin_top"
        android:textColor="@color/black"
        android:textSize="@dimen/dateTextSize"
        app:layout_constraintBottom_toBottomOf="@+id/infoLabel"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/infoLabel"
        app:layout_constraintTop_toTopOf="@+id/infoLabel" />


    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textField_margin_top"
        android:text="@string/textview_task_status"
        android:textSize="@dimen/dateTextSize"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/infoLabel" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/textField_margin_top"
        android:textSize="@dimen/dateTextSize"
        app:layout_constraintStart_toEndOf="@id/statusLabel"
        app:layout_constraintTop_toTopOf="@+id/statusLabel" />

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textField_margin_top"
        android:gravity="center"
        android:text="@string/button_done"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/dateTextSize"
        app:backgroundTint="@color/white"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintEnd_toStartOf="@+id/buttonSave"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/statusLabel" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/button_cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/dateTextSize"
        app:backgroundTint="@color/white"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintBottom_toBottomOf="@+id/bottomGuideline"
        app:layout_constraintEnd_toStartOf="@+id/buttonSave"
        app:layout_constraintStart_toStartOf="@+id/startGuideline" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/button_ok"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/dateTextSize"
        app:backgroundTint="@color/white"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintBottom_toBottomOf="@+id/bottomGuideline"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel" />

</androidx.constraintlayout.widget.ConstraintLayout>

