<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/guideline_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/guideline_margin" />

    <TextView
        android:id="@+id/completedCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_completed_task_count"
        android:textSize="@dimen/dateTextSize"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="@+id/topGuideline" />

    <TextView
        android:id="@+id/completedCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dateTextSize"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/completedCountLabel" />

    <TextView
        android:id="@+id/averageTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_average_time"
        android:textSize="@dimen/dateTextSize"
        android:layout_marginTop="@dimen/info_text_margin_top"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/completedCount" />

    <TextView
        android:id="@+id/averageTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dateTextSize"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/averageTimeLabel" />

    <TextView
        android:id="@+id/minTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_min_time"
        android:textSize="@dimen/dateTextSize"
        android:layout_marginTop="@dimen/info_text_margin_top"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/averageTime" />

    <TextView
        android:id="@+id/minTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dateTextSize"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/minTimeLabel" />

    <TextView
        android:id="@+id/maxTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_max_time"
        android:textSize="@dimen/dateTextSize"
        android:layout_marginTop="@dimen/info_text_margin_top"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/minTime" />

    <TextView
        android:id="@+id/maxTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dateTextSize"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/maxTimeLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>

